BUG: fixed background color overflow issue

--- a/public/style.css
+++ b/public/style.css
@@ -297,6 +297,7 @@ a {
 
 .topContainer {
   display: flex;
+  overflow: auto;
   flex-direction: column;
   background-color: #F1F1F1;
   height: 100vh;
